fix: seperated input box from main file

--- a/src/inputBox/style.css
+++ b/src/inputBox/style.css
@@ -9,3 +9,12 @@
 .dropdown-name{
     padding: 8px;    
 }
+
+.inputComponent{
+    width: 808px;
+    height: 40px;
+    Padding: 8px 12px;
+    border: 1px solid #616061;
+    border-radius: 4px;
+    gap: 16px;
+  }
